--- a/source/_posts/博客搭建小记.md
+++ b/source/_posts/博客搭建小记.md
@@ -16,6 +16,7 @@ tags: __blog
 说句简单的，钱包空空
 ![穷逼一个](/images/穷.gif "穷逼一个")
 所以吧，简单一点，干脆就用GitHub Pages的初始域名了。
+（2024.11.16更新）好吧，换了Netlify，所以现在域名是：[mr-onion-blog.netlify.app](https://mr-onion-blog.netlify.app)
 
 ### 2. 服务器
 
