--- a/source/_posts/博客搭建小记.md
+++ b/source/_posts/博客搭建小记.md
@@ -27,8 +27,10 @@ tags: __blog
 当时搞的时候是完全照着网上的教程来的，还收藏了，直接上链接：[【保姆级】利用Github搭建自己的个人博客，看完就会](https://www.cnblogs.com/chenlove/p/15058170.html)
 
 存储库地址：
-- [国内源](https://kkgithub.com/mr-onion-blog/mr-onion-blog.github.io)
-- [国外源](https://github.com/mr-onion-blog/mr-onion-blog.github.io)
+- [国内源1（成品）](https://kkgithub.com/mr-onion-blog/mr-onion-blog.github.io)
+- [国外源1（成品）](https://github.com/mr-onion-blog/mr-onion-blog.github.io)
+- [国内源2（源码）](https://kkgithub.com/mr-onion-blog/hexo_tmp)
+- [国外源2（源码）](https://github.com/mr-onion-blog/hexo_tmp)
 
 用[Hexo](https://github.com/hexojs/hexo)搭建的，主题用的是默认的Landscape。
 
