--- a/source/_posts/关于这个博客.md
+++ b/source/_posts/关于这个博客.md
@@ -6,14 +6,14 @@ tags: __blog
 
 ## 介绍
 
-这个博客使用的是 [Hexo](https://hexo.io/) + LandScape 搭建而成，托管在 [GitHub](https://github.com/) 上。
+这个博客使用的是 [Hexo](https://hexo.io/) + [Fluid](https://github.com/fluid-dev/hexo-theme-fluid) 搭建而成，托管在 [GitHub](https://github.com/) 上。
 
 别问我为什么这段话这么像AI写的，因为这段就是AI写的（理直气壮）。
 
 ## 感谢
 
 - [Hexo](https://hexo.io/)
-- LandScape
+- [Fluid](https://github.com/fluid-dev/hexo-theme-fluid)
 - [GitHub](https://github.com/)
 
 ## 联系方式
