--- a/source/_posts/本站用途.md
+++ b/source/_posts/本站用途.md
@@ -7,4 +7,4 @@ sticky: 99
 
 本站作为主站使用，将会在第一时间更新，用于存放一些个人博客文章，以及一些其他内容。
 
-[【备份站地址点我】](https://superuseryjh.github.io/)
+[【备份站地址点我】](https://mr-onion-blog.github.io/)
