--- a/source/_posts/关于新的域名.md
+++ b/source/_posts/关于新的域名.md
@@ -8,4 +8,7 @@ tags: __blog
 
 过年了，买域名了，一次性5年，阿里云居然只要169
 
-[新域名](https://blog.mr-onion-blog.fun)
+[新域名](https://mr-onion-blog.fun)
+
+![域名（阿里云）](/images/域名1.jpg)
+![域名（Netlify）](/images/域名2.jpg)
