--- a/source/_posts/必要链接暂存页.md
+++ b/source/_posts/必要链接暂存页.md
@@ -3,7 +3,11 @@ title: 必要链接暂存页
 date: 2024-11-19 22:36:00
 tags: __blog
 ---
-## 学校
 
-- [物理视频](https://pan.huang1111.cn/s/4Rbmlsg)
-- 等待更新
+<center>
+Blank Page
+
+此页为空白页
+
+[![](/img/avatar.jpg)](../about/)
+</center>
