--- a/source/_posts/必要链接暂存页.md
+++ b/source/_posts/必要链接暂存页.md
@@ -1,13 +1,7 @@
 ---
 title: 必要链接暂存页
 date: 2024-11-19 22:36:00
-tags: __blog
+tags: __school
 ---
 
-<center>
-Blank Page
-
-此页为空白页
-
-[![](/img/avatar.jpg)](/about/)
-</center>
+- [2025寒假道法PPT](https://pan.huang1111.cn/s/YLljkhA)
