--- a/source/_posts/必要链接暂存页.md
+++ b/source/_posts/必要链接暂存页.md
@@ -4,5 +4,5 @@ date: 2024-11-19 22:36:00
 tags: __school
 ---
 
-- [2025寒假道法PPT](https://pan.huang1111.cn/s/xbBjeUV)
+- [化学小报](https://pan.huang1111.cn/s/E7MaQfb)
 - 暂无内容
